# darthshader

./: Cargo.toml  LICENSE  README.md  afl_4_10c.diff
darthshader/: Cargo.toml  build.rs
darthshader-afl/: Cargo.toml
darthshader-afl/harnesses/dawn/: README.md  build.sh  build_test.sh
darthshader-afl/harnesses/nagafl/: Cargo.toml  README.md
darthshader-afl/harnesses/webkit/: README.md
darthshader-afl/harnesses/webkit/patches/: webkit_ad13d16.diff
darthshader-afl/src/: main.rs
darthshader/src/: dictionary.rs  dictionary.txt  layeredinput.rs  lib.rs  lifter.rs  randomext.rs
darthshader/src/ast/: mod.rs  mutate.rs  tree.rs
darthshader/src/generator/: config.rs  expression.rs  generateir.rs  mod.rs  statement.rs
darthshader/src/ir/: funcext.rs  iter.rs  minimizer.rs  mod.rs
darthshader/tree-sitter-wgsl/src/: scanner.cc
harnesses/dawn/: README.md
harnesses/dawn/patches/: dawn_3de0f00.diff
harnesses/dxcompiler/: README.md
harnesses/nagafl/src/: main.rs
src/: exit.rs  exitobserver.rs  ladder.rs  layeredinput.rs  lib.rs  lifter.rs  main.rs  minimizer.rs  randomext.rs
src/ast/: mod.rs  mutate.rs  tree.rs
src/generator/: config.rs  expression.rs  generateir.rs  mod.rs  statement.rs
src/ir/: debug.rs  exprscope.rs  funcext.rs  minimizer.rs  mod.rs  mutate.rs
tree-sitter-wgsl/src/: parser.c
