cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "darthshader",
    "darthshader-afl",
]
# Use the edition 2021 feature resolver for the workspace.
# Virtual workspaces default to resolver = "1", but edition 2021 members imply resolver = "2".
# Specifying it explicitly avoids cargo warnings.
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = 1
rustflags = ["-C", "force-frame-pointers=yes"]
panic = 'unwind'

[profile.dev]
panic = 'unwind'
debug = 1

[profile.dev.package.naga]
opt-level = 3
overflow-checks = false
